<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img">
    >
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_removebg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:id="@+id/processBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:gravity="right"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/offwhite"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:gravity="right"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/offwhite"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:gravity="right"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/offwhite"></LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:padding="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/to_loginPage_Btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:text="@string/HasAccount"
        android:textColor="@color/white" />


    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        layout="@layout/processbar">
        >
    </include>


</RelativeLayout>
